--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,9 @@ production:
   database: ecommerce-app_production
   username: ecommerce-app
   password: <%= ENV['ECOMMERCE-APP_DATABASE_PASSWORD'] %>
+
+  production:
+    database: ecommerce-app-production
+    adapter: postgresql
+    encoding: unicode
+    pool: 5
